old/k3s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: depot
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: depot.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-front-service
            port:
              number: 80
